# mcp-egrul

./: .env.example  CHANGELOG.md  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
src/mcp_egrul/: __init__.py  constants.py  server.py
src/mcp_egrul/sources/: __init__.py
src/mcp_egrul/tools/: search_by_inn.py
tests/: conftest.py  test_hosted_adapter.py  test_server_ping.py
