[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-egrul"
version = "0.1.6"
description = "MCP server for Russian EGRUL / EGRIP lookups via ФНС open-data (search, cards, founders, director, bulk)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno-mcp.ru" }]
keywords = [
  "mcp",
  "fns",
  "egrul",
  "egrip",
  "russia",
  "kontragent",
  "due-diligence",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=0.2.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "lxml>=5.2.0,<7.0.0",
  "apscheduler>=3.10.0,<4.0.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<2.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "respx>=0.21.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-egrul"
Repository = "https://github.com/atomno-mcp/mcp-egrul"
Issues = "https://github.com/atomno-mcp/mcp-egrul/issues"
Changelog = "https://github.com/atomno-mcp/mcp-egrul/blob/main/CHANGELOG.md"
Documentation = "https://github.com/atomno-mcp/mcp-egrul#readme"

[project.scripts]
atomno-mcp-egrul = "mcp_egrul.server:main"
atomno-mcp-egrul-import = "mcp_egrul.scripts.import_opendata:main"
atomno-mcp-egrul-scheduler = "mcp_egrul.scripts.scheduler:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_egrul"]
include = ["src/mcp_egrul/py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/mcp_egrul"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
